--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 	<!-- <link rel="stylesheet" href="../static/bower_components/font-awesome/css/font-awesome.min.css"> Resource style -->
 
     <link rel="icon" type="image/x-icon" href="../static/favicon.ico"/>
+    <script src="https://checkout.stripe.com/checkout.js"></script> <!-- Stripe -->
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
