added code that wasnt pushed before

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
 
 <script src="../static/js/modernizr.js"></script> <!-- Modernizr -->
 <script src="../static/bower_components/jquery/dist/jquery.min.js"></script>
+<script src = "https://checkout.stripe.com/checkout.js"></script>
 <script src="../static/js/total-site.js"></script>
 <script src="../static/js/main.js"></script>
 <script src="../static/js/menu.js"></script>
